--- a/Project19/index.html
+++ b/Project19/index.html
@@ -102,8 +102,8 @@
             </div>
         </div>
         <div class="footer__txt">
-            <p class="txt__left">© Raphael Lechner</p>
-            <p class="txt__right">Imprint</p>
+            <p class="txt__left">©Zhibek Mukhtarbekova</p>
+            <p class="txt__right">2020</p>
         </div>
     </footer>
     <script src="js/jquery-3.2.0.min.js"></script>
